syntax = "proto3";

package post;

service PostService {
  rpc GetPost(GetPostReq) returns (GetPostRes) {};
  rpc GetCommentList(GetCommentListReq) returns (GetCommentListRes);
  rpc GetCocommentList(GetCocommentListReq) returns (GetCocommentListRes);
  rpc GetPostsIdsByHashtag(GetPostsIdsByHashtagReq) returns (GetPostsIdsByHashtagRes);
  rpc SearchPostIdsBySearchString(SearchPostIdsBySearchStringReq) returns (SearchPostIdsBySearchStringRes);
  rpc SearchHashtagsBySearchString(SearchHashtagsBySearchStringReq) returns (SearchHashtagsBySearchStringRes);
}


message GetPostReq {
  string postId = 1;
}
message GetPostRes {
  int32 likesCount = 1;
  int32 commentCount = 2;
  string title = 3;
  string id = 4;
  string userId = 5;
}


message Comment {
  int32 commentId = 1;
  string comment = 2;
  string createdAt = 3;
  string userId = 4;
  int32 likesCount = 5;
  int32 cocommentCount = 6;
  string username = 7;
  string img = 8;
}
message GetCommentListReq {
  string postId = 1;
  int32 page = 2;
}
message GetCommentListRes {
  repeated Comment comments = 1;
}


message Cocomment {
  string cocomment = 1;
  string createdAt = 2;
  string userId = 3;
  int32 likesCount = 4;
  string username = 5;
  string img = 6;
  int32 cocommentId = 7;
}
message GetCocommentListReq {
  int32 commentId = 1;
  int32 page = 2;
}
message GetCocommentListRes {
  repeated Cocomment cocomments = 1;
}

message GetPostsIdsByHashtagReq {
  string hashtag = 1;
  int32 page = 2;
}
message GetPostsIdsByHashtagRes {
  bool searchSuccess = 1;
  int32 count = 2;
  repeated string _ids = 3;
}

message SearchPostIdsBySearchStringReq {
  string searchString = 1;
  int32 page = 2;
}
message SearchPostIdsBySearchStringRes {
  repeated string _ids = 1;
}

message SearchHashtagsBySearchStringReq {
  string searchString = 1;
  int32 page = 0;
}
message SearchHashtagsBySearchStringRes {
  repeated tags searchedTags = 1;
}
message tags {
  string tagName = 1;
  int32 count = 2;
}

